<resources>
    <string name="app_name">FMG Hangman</string>
    <string name="action_settings">Settings</string>
    <string name="label_username">Username</string>
    <string name="label_password">Password</string>
    <string name="testfield_username">Username</string>
    <string name="button_login">Login</string>
    <string name="label_welcome">Hangman - Welcome</string>
    <string name="button_register">Register</string>
    <string name="button_exit">Exit</string>
    <string name="title_activity_register_menu">RegisterMenu</string>
    <string name="hello_world">Hello world!</string>
    <string name="label_register">Hangman - Register</string>
    <string name="button_back">Back</string>
    <string name="label_register_username">Username</string>
    <string name="label_mail">E-Mail</string>
    <string name="label_register_hint">All fields are required.</string>
    <string name="label_register_hint_second">Only letters/digits allowed</string>
    <string name="info_register_succeed">Successfully registered!</string>
    <string name="info_login_succeed">Successfully logged in!</string>
    <string name="error_general_sqlite">Error while reading database!</string>
    <string name="error_register_emptyUsername">Please enter a username!</string>
    <string name="error_register_userAlreadyExists">User already exists!</string>
    <string name="error_register_invalidEmail">Please enter a valid e-mail!</string>
    <string name="error_register_passwordShort">Your password needs at least 8 characters!</string>
    <string name="error_login_wrongUsername">Username does not exists!</string>
    <string name="error_login_offlineNoUser">You have to login online once before using the offline mode with this user!</string>
    <string name="error_login_wrongPassword">Wrong Password!</string>
    <string name="error_register_wrongRepeatedPassword">The passwords do not match!</string>
    <string name="error_register_offline">Your phone needs to be online to register!</string>
    <string name="error_register_mailAlreadyExists">This e-mail is already registered!</string>
    <string name="button_not_registered">Not registered?</string>
    <string name="label_repeat_password">Repeat password</string>
    <string name="label_register_hint_mail">yourmail@example.com</string>
    <string name="label_hint_register_password">At least 6 signs</string>
    <string name="label_register_hint_repeatpassword">Repeat your password</string>
    <string name="error_changePW_oldPasswordWrong">The old password is not correct!</string>
    <string name="error_changePW">Error changing passwords!</string>
    <string name="changePW_success">Password changed!</string>
    <string name="hint_settings_changed">Settings changed!</string>
    <string name="button_play">Play</string>
    <string name="button_multiplayer">Multiplayer</string>
    <string name="button_options">Options</string>
    <string name="text_header">Hangman - Menu</string>
    <string name="text_header_options">Hangman - Options</string>
    <string name="button_apply">Apply</string>
    <string name="text_language">Language</string>
    <string name="text_ownWords">Own Words</string>
    <string name="buttons_about">About</string>
    <string name="color_green">Green</string>
    <string name="color_blue">Blue</string>
    <string name="color_purple">Purple</string>
    <string name="color_orange">Orange</string>
    <string name="title_activity_main_menu">MainMenu</string>
    <string name="title_activity_options">Options</string>
    <string name="text_chooseColor">Choose Color</string>
    <string name="allowedDigits">
        0123456789qwertzuiopasdfghjklyxcvbnmäöüQWERTZUIOPÜASDFGHJKLYXCVBNMÖÄ</string>
    <string name="lettersOnly">
    qwertzuiopasdfghjklyxcvbnmäüöQWERT ZUIOPÜASDFGHJKLYXCVBNMÄÜÖ-.</string>
    <string name="options_hint_restart">Please restart the app to apply changes!</string>
    <string name="login_save_login">Save login data</string>
    <string name="title_activity_about">About</string>
    <string name="label_about">About the developers</string>
    <string name="label_x">╳</string>
    <string name="text_header_categories">Hangman - Categories</string>
    <string name="checkbox_cat_all">All</string>
    <string name="categoryName_capitals">Capitals</string>
    <string name="categoryName_citys_de">German Citys</string>
    <string name="categoryName_countries">Countries</string>
    <string name="categoryName_gaming">Gaming</string>
    <string name="categoryName_instruments">Instruments</string>
    <string name="categoryName_cars">Cars</string>
    <string name="categoryName_rivers">Rivers</string>
    <string name="categoryName_trees">Trees</string>
    <string name="categoryName_animals">Animals</string>
    <string name="categoryName_ownWord">Own Words</string>
    <string name="categoryName_test">Test Data</string>
    <string name="categoryName_spices">Spices</string>
    <string name="categoryName_nuts">Nuts</string>
    <string name="categoryName_vegetables">Vegetables</string>
    <string name="title_activity_music_menu">MusicMenu</string>
    <string name="options_music_header">Hangman - Music</string>
    <string name="options_music_mute">Mute</string>
    <string name="options_music_volume">Volume</string>
    <string name="title_activity_layout_menu">LayoutMenu</string>
    <string name="options_layout_header">Hangman - Video</string>
    <string name="label_options_video">Video</string>
    <string name="button_video">Video</string>
    <string name="button_options_music">Music</string>
    <string name="button_options_categories">Categories</string>
    <string name="hint_loading">Loading…</string>
    <string name="options_video_label_quality">Quality</string>
    <string name="title_activity_own_words_menu">OwnWordsMenu</string>
    <string name="text_header_ownwords">Hangman - Add Words</string>
    <string name="newWord_new">New</string>
    <string name="addWord_delete">Delete</string>
    <string name="newWord_Done">Add</string>
    <string name="ownWords_hint_word">Word</string>
    <string name="ownWords_hint_category">Category</string>
    <string name="ownWords_hint_description">Description</string>
    <string name="addWord_close">Close</string>
    <string name="button_mainMenu_account">Account</string>
    <string name="ownWord_hint_tooShort">Please enter at least 3 signs!</string>
    <string name="ownWord_hint_added">Word added!</string>
    <string name="ownWord_hint_removed">Word removed!</string>
    <string name="ownWord_hint_word_already_exists">Word already exists!</string>
    <string name="string_win">You win!</string>
    <string name="string_lose">You lose!</string>
    <string name="string_perfect">PERFECT!</string>
    <string name="string_Category">Category</string>
    <string name="string_Word">Word</string>
    <string name="string_Description">Description</string>
    <string name="category_hint_not_saved">Categories not saved!</string>
    <string name="label_statistic_hadder">Statistic</string>
    <string name="label_statistic_wins">Wins:</string>
    <string name="label_statistic_lose">Losses:</string>
    <string name="label_statistc_correctLetters">Correct Letters:</string>
    <string name="label_statistic_wrongLetters">Wrong Letters:</string>
    <string name="label_statistic_perfect">Perfects:</string>
    <string name="text_header_account">Account details</string>
    <string name="account_change_pw">Change Password</string>
    <string name="account_achievements">Achievements</string>
    <string name="account_logout">Logout</string>
    <string name="label_achievements">Achievements</string>
    <string name="Account_label_logged_in">Logged in as:</string>
    <string name="label_current_User">NULL</string>
    <string name="changePassword_button">Change Password</string>
    <string name="text_header_multiplayer">Multiplayer</string>
    <string name="text_header_bluetooth">Multiplayer - Bluetooth</string>
    <string name="text_header_singleplayerMenu">Singleplayer</string>
    <string name="button_information">i</string>
    <string name="button_singleplayerMenu_StandardMode">Standard Mode</string>
    <string name="button_singleplayerMenu_CustomMode">Custom Mode</string>
    <string name="button_singleplayerMenu_HardcoreMode">Hardcore Mode</string>
    <string name="button_singleplayerMenu_SpeedMode">Speed Mode</string>
    <string name="message_singleplayerMenu_info_StandardMode">Statistics are Enabled. All categories are used without your own words.</string>
    <string name="message_singleplayerMenu_info_CustomMode">Statistics are Disabled. You can choose the categories in Options -> Categorys.</string>
    <string name="message_singleplayerMenu_info_HardcoreMode">This Mode will be really hard. The Hangman does not reset after solving a word. Solve as many Letters and Words to raise your Score! Reach the best Highscore to lead the scoreboard!</string>
    <string name="message_singleplayerMenu_info_SpeedMode">(COMING SOON) Fight against the Time. You start with 120 Seconds and gain 5 more for each correct letter, but loose 20 for reaching an full Hangman. If You solve an Word your score rises!</string>
    <string name="string_score">Score</string>
    <string name="error_reload_categories">An error with the database occurred. Please check your internet connection</string>
    <string name="string_newHighscore">NEW HIGHSCORE!</string>
    <string name="string_yourNewHighscore">New Highscore: </string>
    <string name="string_yourOldHighscore">Old Highscore: </string>
    <string name="string_yourHighscore">Your Highscore: </string>
    <string name="string_yourCurrentScore">Current Score: </string>
    <string name="label_statistic_scoreStandardMode">Score Standard Mode:</string>
    <string name="label_statistic_scoreHardcoreMode">Highscore Hardcore Mode:</string>
    <string name="label_statistic_scoreSpeedMode">Highscore Speed Mode:</string>
    <string name="label_scoreboard_header">Scoreboard</string>
    <string name="button_accountMenu_Scoreboard">Scoreboard</string>
    <string name="error_no_currentUser">Failed to load User. Please login again!</string>
    <string name="multiplayerMenu_button_bluetooth">Bluetooth</string>
    <string name="multiplayerMenu_button_wifi">WiFi</string>
    <string name="multiplayerMenu_button_local">Local</string>
    <string name="text_header_multiplayer_local">Multiplayer Local</string>
    <string name="multiplayer_local_lobby_players">Players:</string>
    <string name="multiplayer_local_lobby_button_play">Play</string>
    <string name="Label_changePW_new">New Password</string>
    <string name="label_changePW_old">Old Password</string>
    <string name="header_changePW">Change password</string>
    <string name="label_changePW_change">Change password</string>
    <string name="options_checkForUpdate">Get latest version</string>
    <string name="update_error_general">Update failed!</string>
    <string name="update_info_alreadyLatest">You are using already the latest version!</string>
    <string name="update_info_newVersion">A new version is out!</string>
    <string name="update_info_newVersion_nowTo">Go to Settings -> get latest version!</string>
    <string name="update_info_downloadStarted">Your download has started!</string>
    <string name="about_info">Developed by: FMG Trainee year 2013</string>
    <string name="update_info_downloadNotice">Your download has started!
        If there is an error opening the apk, please try installing the app manually.
        You will find the apk in the downloads directory.</string>
    <string name="about_info2">Music by: F. Felsen</string>
    <string name="about_info3">Further help from: L. Feierabend</string>
    <string name="update_info_success_title">Download finished!</string>
    <string name="update_info_success_description">Your download has finished. Click here to install the new version!</string>
</resources>