<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="teamfmg.hangman.AccountMenu"
    android:background="@drawable/blue"
    android:id="@+id/relLayout_Account">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/text_header_account"
        android:id="@+id/text_header_account"
        android:textSize="@dimen/textSizeBig"
        android:textColor="@color/color_white"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_x"
        android:id="@+id/account_close"
        android:textStyle="bold"
        android:textColor="@color/color_white"
        android:onClick="onClick"
        android:capitalize="characters"
        android:background="@null"
        android:gravity="center_vertical|center_horizontal"
        android:minWidth="@dimen/textSizeDouble"
        android:textSize="@dimen/textSizeBig"
        android:minHeight="@dimen/textSizeDouble"
        android:layout_alignTop="@+id/text_header_account"
        android:layout_alignParentRight="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_statistic_hadder"
        android:id="@+id/account_statistic"
        android:textSize="20sp"
        android:minHeight="@dimen/button_height"
        android:layout_alignParentRight="true"
        android:layout_marginTop="@dimen/marginToHeader"
        android:layout_below="@+id/text_header_account" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/account_change_pw"
        android:id="@+id/account_change_pw"
        android:textSize="20sp"
        android:minHeight="@dimen/button_height"
        android:layout_below="@+id/account_achievments"
        android:layout_alignParentRight="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/account_achievements"
        android:id="@+id/account_achievments"
        android:textSize="20sp"
        android:minHeight="@dimen/button_height"
        android:layout_below="@+id/account_statistic"
        android:layout_alignParentLeft="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/account_logout"
        android:id="@+id/account_logout"
        android:textSize="20sp"
        android:minHeight="@dimen/button_height"
        android:layout_below="@+id/account_change_pw"
        android:layout_alignParentLeft="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/Account_label_logged_in"
        android:id="@+id/Account_label_logged_in"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:textColor="@color/color_white" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/label_current_User"
        android:id="@+id/label_current_User"
        android:layout_alignTop="@+id/Account_label_logged_in"
        android:layout_alignRight="@+id/text_header_account"
        android:textColor="@android:color/white" />
</RelativeLayout>
