<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="teamfmg.hangman.RegisterMenu"
    android:background="@drawable/green"
    android:id="@+id/relLayout_register">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/label_register"
        android:id="@+id/label_register"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:textColor="#ffffff"
        android:textIsSelectable="false"
        android:textSize="@dimen/textSizeBig" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_back"
        android:id="@+id/button_back"
        android:minHeight="@dimen/button_height"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:textSize="@dimen/textSizeMedium" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/label_username"
        android:id="@+id/label_register_username"
        android:layout_below="@+id/label_register"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:layout_alignParentEnd="false"
        android:layout_alignRight="@+id/textField_register_username"
        android:layout_alignLeft="@+id/textField_register_username"
        android:textColor="#ffffff"
        android:textSize="@dimen/textSizeMedium" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:ems="10"
        android:id="@+id/textField_register_username"
        android:layout_below="@+id/label_register_username"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:textSize="@dimen/textSizeMedium"
        android:autoText="false"
        android:maxLength="@integer/maxUsernameValue"
        android:inputType="text"
        android:digits="0,1,2,3,4,5,6,7,8,9,*,qwertzuiopasdfghjklyxcvbnmäöüß,_,-"
        android:hint="@string/label_register_hint_second" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/textField_register_password"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/label_register_password"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:textSize="@dimen/textSizeMedium"
        android:maxLength="@integer/maxPasswordLength"
        android:hint="@string/label_hint_register_password" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/label_password"
        android:id="@+id/label_register_password"
        android:layout_below="@+id/textField_register_mail"
        android:layout_alignParentStart="true"
        android:textColor="#ffffff"
        android:textSize="@dimen/textSizeMedium" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/textField_register_mail"
        android:layout_below="@+id/label_mail"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:textSize="@dimen/textSizeMedium"
        android:maxLength="@integer/maxMailLength"
        android:hint="@string/label_register_hint_mail" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/label_mail"
        android:id="@+id/label_mail"
        android:layout_below="@+id/textField_register_username"
        android:layout_alignParentStart="true"
        android:textColor="#ffffff"
        android:textSize="@dimen/textSizeMedium" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_register"
        android:id="@+id/button_register"
        android:minHeight="@dimen/button_height"
        android:layout_above="@+id/button_back"
        android:layout_alignStart="@+id/button_back"
        android:layout_alignLeft="@+id/button_back"
        android:layout_centerInParent="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:textSize="@dimen/textSizeMedium"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/label_register_hint"
        android:id="@+id/label_register_hint"
        android:textColor="#ffffff"
        android:textSize="@dimen/textSizeSmall"
        android:layout_below="@+id/textField_register_repeat_password"
        android:layout_alignParentLeft="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/label_repeat_password"
        android:id="@+id/textView"
        android:textColor="#ffffff"
        android:textSize="@dimen/textSizeMedium"
        android:layout_below="@+id/textField_register_password"
        android:layout_alignParentLeft="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/textField_register_repeat_password"
        android:textSize="@dimen/textSizeMedium"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:maxLength="@integer/maxPasswordLength"
        android:hint="@string/label_register_hint_repeatpassword" />

</RelativeLayout>
