<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="teamfmg.hangman.OwnWordsMenu"
    android:id="@+id/relLayout_ownWords"
    android:background="@drawable/purple">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/text_header_ownwords"
        android:id="@+id/text_header_ownwords"
        android:textSize="@dimen/textSizeBig"
        android:textColor="@color/color_white"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_x"
        android:id="@+id/ownwords_close"
        android:textStyle="bold"
        android:textColor="@color/color_white"
        android:capitalize="characters"
        android:background="@null"
        android:gravity="center_vertical|center_horizontal"
        android:minWidth="@dimen/textSizeDouble"
        android:textSize="@dimen/textSizeBig"
        android:minHeight="@dimen/textSizeDouble"
        android:layout_alignTop="@+id/text_header_ownwords"
        android:layout_alignParentRight="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/newWord_Done"
        android:id="@+id/newWord_Done"
        android:minWidth="@dimen/AddWord"
        android:maxWidth="@dimen/AddWord"
        android:layout_below="@+id/ownWords_description"
        android:layout_alignParentRight="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/ownWords_word"
        android:layout_below="@+id/ownwords_close"
        android:layout_alignParentLeft="true"
        android:hint="@string/ownWords_hint_word"
        android:layout_marginTop="@dimen/marginToHeader"
        android:maxLength="@integer/maxWordLength"
        android:digits="@string/lettersOnly" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/ownWords_description"
        android:layout_below="@+id/ownWords_word"
        android:layout_alignParentRight="true"
        android:hint="@string/ownWords_hint_description"
        android:maxLength="@integer/maxDescriptionLength" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ownWords_Scroll"
        android:fillViewport="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="false"
        android:layout_alignParentStart="false"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/newWord_Done">


        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/ownWords_linLayout"
            android:layout_below="@+id/ownWords_word"
            android:layout_alignParentLeft="true">

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
