<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".LoginMenu"
    android:background="@drawable/blue"
    android:id="@+id/relLayout_login">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/label_username"
        android:id="@+id/label_username"
        android:layout_below="@+id/label_welcome"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="@dimen/marginToHeader"
        android:textColor="#ffffff"
        android:textSize="@dimen/textSizeMedium" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/textField_welcome_username"
        android:layout_below="@+id/label_username"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:textSize="@dimen/textSizeMedium"
        android:imeOptions="actionNext"
        android:maxLength="@integer/maxUsernameValue"
        android:hint="@string/label_register_username"
        android:singleLine="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/textField_welcome_password"
        android:layout_below="@+id/label_password"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:textSize="@dimen/textSizeMedium"
        android:imeOptions="actionDone"
        android:maxLength="@integer/maxPasswordLength"
        android:singleLine="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/label_password"
        android:id="@+id/label_password"
        android:layout_below="@+id/textField_welcome_username"
        android:layout_alignParentLeft="true"
        android:textColor="#ffffff"
        android:textSize="@dimen/textSizeMedium" />



    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_login"
        android:id="@+id/button_login"
        android:minHeight="@dimen/button_height"
        android:layout_above="@+id/button_register"
        android:layout_centerHorizontal="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:textSize="@dimen/textSizeMedium" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/label_welcome"
        android:id="@+id/label_welcome"
        android:layout_alignParentTop="true"
        android:foreground="#ffffff"
        android:textColor="#ffffff"
        android:textSize="@dimen/textSizeBig" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_not_registered"
        android:id="@+id/button_register"
        android:minHeight="@dimen/button_height"
        android:layout_above="@+id/button_exit"
        android:layout_centerHorizontal="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:textSize="@dimen/textSizeMedium" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_exit"
        android:id="@+id/button_exit"
        android:minHeight="@dimen/button_height"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:textSize="@dimen/textSizeMedium" />

</RelativeLayout>
